# image-translator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflow/: deploy.yml
src/: __init__.py  api.py  config.py  google_translate_browser.py
