[project]
name = "imagetest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.52.0",
    "fastapi>=0.115.0",
    "loguru>=0.7.2",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.20",
    "pillow>=11.3.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
